@@ -1,3 +1,8 @@
+2007-01-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_dev/src/opencv_grabber: Added --loop option for
+	opencv_grabber, per Alex Bernardino's suggestion.
+
 2006-12-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/ThreadImpl.cpp: fixed behavior of threads
